[gd_scene load_steps=31 format=3 uid="uid://dtlxte6rijv77"]

[ext_resource type="Script" uid="uid://v6kgu5fottyv" path="res://Scripts/player.gd" id="1_kyqiw"]
[ext_resource type="Texture2D" uid="uid://bl388umk28hx6" path="res://Assets/Muz/Muz_JUMP.png" id="2_glx4g"]
[ext_resource type="Texture2D" uid="uid://btpbpewrm561" path="res://Assets/Muz/Muz_IDLE.png" id="2_megsn"]
[ext_resource type="Texture2D" uid="uid://5qhbsv78fxcn" path="res://Assets/Muz/Muz_HURT.png" id="3_miouo"]
[ext_resource type="Texture2D" uid="uid://du2j1yp66woh6" path="res://Assets/Muz/Muz_RUN.png" id="3_yoq75"]
[ext_resource type="PackedScene" uid="uid://bi7lk15xk624v" path="res://Scenes/Components/gravity_component.tscn" id="5_5ixxa"]
[ext_resource type="PackedScene" uid="uid://doooxpud87nj2" path="res://Scenes/hurt_box.tscn" id="6_miouo"]
[ext_resource type="PackedScene" uid="uid://dmltd84vx4tiq" path="res://Scenes/Components/input_component.tscn" id="6_nn08x"]
[ext_resource type="PackedScene" uid="uid://cidf4gjyonx2t" path="res://Scenes/Components/movement_component.tscn" id="7_52ee3"]
[ext_resource type="PackedScene" uid="uid://b0uxrbejuk3ug" path="res://Scenes/Components/animation_component.tscn" id="10_yoq75"]
[ext_resource type="PackedScene" uid="uid://b7gls8nvptfou" path="res://Scenes/Components/health_component.tscn" id="11_ksbbd"]
[ext_resource type="PackedScene" uid="uid://blltvlkj6lskc" path="res://Scenes/Components/advanced_jump_component.tscn" id="12_glx4g"]
[ext_resource type="PackedScene" uid="uid://b5vt1jvxrv0fi" path="res://Scenes/Components/hurtbox_component.tscn" id="12_miouo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i2e8t"]
atlas = ExtResource("2_glx4g")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qidb7"]
atlas = ExtResource("3_miouo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbbd"]
atlas = ExtResource("2_megsn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_glx4g"]
atlas = ExtResource("2_megsn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_miouo"]
atlas = ExtResource("2_megsn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3h8g"]
atlas = ExtResource("2_megsn")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e7my"]
atlas = ExtResource("2_megsn")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_arntx"]
atlas = ExtResource("2_megsn")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_70hv0"]
atlas = ExtResource("2_glx4g")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lslt6"]
atlas = ExtResource("3_yoq75")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulo2v"]
atlas = ExtResource("3_yoq75")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iu4k"]
atlas = ExtResource("3_yoq75")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0x7a"]
atlas = ExtResource("3_yoq75")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v66d"]
atlas = ExtResource("3_yoq75")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x63xi"]
atlas = ExtResource("3_yoq75")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dewec"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2e8t")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qidb7")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glx4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miouo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3h8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e7my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arntx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_70hv0")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lslt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulo2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iu4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0x7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v66d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x63xi")
}],
"loop": true,
"name": &"run",
"speed": 13.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dewec"]
radius = 2.0
height = 10.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("gravity_component", "input_component", "movement_component", "advanced_jump_component", "animation_component", "health_component", "camera")]
floor_stop_on_slope = false
floor_max_angle = 0.523599
floor_snap_length = 6.0
script = ExtResource("1_kyqiw")
gravity_component = NodePath("gravity_component")
input_component = NodePath("Input_component")
movement_component = NodePath("movement_component")
advanced_jump_component = NodePath("advanced_jump_component")
animation_component = NodePath("animation_component")
health_component = NodePath("health_component")
camera = NodePath("Camera2D")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_dewec")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_dewec")

[node name="HurtBox" parent="." instance=ExtResource("6_miouo")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="gravity_component" parent="." instance=ExtResource("5_5ixxa")]
gravity = 500.0

[node name="animation_component" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("10_yoq75")]
sprite = NodePath("../Sprite2D")

[node name="Input_component" parent="." instance=ExtResource("6_nn08x")]

[node name="movement_component" parent="." instance=ExtResource("7_52ee3")]
speed = 55.0
air_accel = 2

[node name="advanced_jump_component" parent="." instance=ExtResource("12_glx4g")]
jump_speed = -180.0

[node name="health_component" parent="." node_paths=PackedStringArray("hurtbox_component") instance=ExtResource("11_ksbbd")]
hurtbox_component = NodePath("../hurtbox_component")

[node name="hurtbox_component" parent="." node_paths=PackedStringArray("hurtbox") instance=ExtResource("12_miouo")]
hurtbox = NodePath("../HurtBox")
